added chordsheet js and styling

--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  },
   "dependencies": {
-    "chordjs": "^2.0.1",
     "chordsheetjs": "^6.2.2",
     "gatsby": "^4.12.1",
     "gatsby-plugin-image": "^2.12.1",
