--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
+    "react-scroll": "^1.8.7",
     "sass": "^1.50.0"
   }
 }
