--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-scroll": "^1.8.7",
-    "sass": "^1.50.0"
+    "sass": "^1.50.0",
+    "simplechordpro": "^1.0.1"
   }
 }
