--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby": "^4.12.1",
     "gatsby-plugin-image": "^2.12.1",
     "gatsby-plugin-manifest": "^4.12.1",
+    "gatsby-plugin-offline": "^5.20.0",
     "gatsby-plugin-react-helmet": "^5.12.1",
     "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-sass": "^5.12.1",
